objects/pse__Utilization_Run__c.object
<CustomObject>
    <customHelpPage>pse__UtilizationRunHelp</customHelpPage>
    <description>Stores the calculation criteria for a utilization run.</description>
    <fields>
        <fullName>pse__End_Date__c</fullName>
        <description>The end date for this utilization run.</description>
        <inlineHelpText>The end date for this utilization run.</inlineHelpText>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Error__c</fullName>
        <description>If the status is &quot;Error&quot;, this includes information about the error.</description>
        <inlineHelpText>If the status is &quot;Error&quot;, this includes information about the error.</inlineHelpText>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pse__Process_Completed__c</fullName>
        <description>The date and time that the utilization run process completed.</description>
        <inlineHelpText>The date and time that the utilization run process completed.</inlineHelpText>
        <label>Deprecated:Process Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pse__Process_End_Date_Time__c</fullName>
        <description>The date and time that the utilization run process completed.</description>
        <inlineHelpText>The date and time that the utilization run process completed.</inlineHelpText>
        <label>Process End Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pse__Process_Start_Date_Time__c</fullName>
        <description>The date and time that the utilization run process started.</description>
        <inlineHelpText>The date and time that the utilization run process started.</inlineHelpText>
        <label>Process Start Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pse__Process_Started__c</fullName>
        <description>The date and time that the utilization run process started.</description>
        <inlineHelpText>The date and time that the utilization run process started.</inlineHelpText>
        <label>Deprecated:Process Started</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pse__Start_Date_Of_Changes__c</fullName>
        <description>The start date based on the Only Include Changes checkbox for this utilization run.</description>
        <inlineHelpText>The start date based on the Only Include Changes checkbox for this utilization run.</inlineHelpText>
        <label>Start Date of Changes</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Start_Date__c</fullName>
        <description>The start date for this utilization run.</description>
        <inlineHelpText>The start date for this utilization run.</inlineHelpText>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Status__c</fullName>
        <description>The current status of this utilization run.</description>
        <inlineHelpText>The current status of this utilization run.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Total_Batches__c</fullName>
        <description>The number of batches for this utilization run.</description>
        <inlineHelpText>The number of batches for this utilization run.</inlineHelpText>
        <label>Total Batches</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Utilization Run</label>
    <listViews>
        <fullName>pse__All</fullName>
        <columns>NAME</columns>
        <columns>pse__Start_Date__c</columns>
        <columns>pse__End_Date__c</columns>
        <columns>pse__Process_Start_Date_Time__c</columns>
        <columns>pse__Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>UR-{000000}</displayFormat>
        <label>Utilization Run Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Utilization Runs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>